--- a/quarto/references.bib
+++ b/quarto/references.bib
@@ -93,3 +93,21 @@ keywords = {visual similarity, search, interior design, deep learning}
 	doi = {10.1023/A:1024634613982}
 }
 
+@article{sklearn,
+  title={Scikit-learn: Machine Learning in {P}ython},
+  author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+          and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+          and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+          Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+  journal={Journal of Machine Learning Research},
+  volume={12},
+  pages={2825--2830},
+  year={2011}
+}
+
+@Misc{kmodes,
+  author = {Nelis J. de Vos},
+  title = {kmodes categorical clustering library},
+  howpublished = {\url{https://github.com/nicodv/kmodes}},
+  year = {2015--2024}
+}
