--- a/quarto/intro.qmd
+++ b/quarto/intro.qmd
@@ -18,6 +18,8 @@ At its core, this endeavor resonates with a diverse array of stakeholders, each 
 
 In this project, machine learning methods play a pivotal role in extracting meaningful insights from the vast sea of Amazon's retail product data. Techniques such as Principal Component Analysis (PCA) enable dimensionality reduction, allowing for the identification of key features influencing consumer behavior. Clustering algorithms group similar products or consumers together, facilitating targeted marketing strategies and personalized recommendations. Neural networks, with their ability to learn intricate patterns, offer valuable predictive capabilities, aiding in demand forecasting and inventory management. Regression analysis uncovers relationships between variables, potentially helping businesses understand the impact of pricing, promotions, and other factors on sales. Support Vector Machines (SVM), Naive Bayes, and decision trees provide additional tools for classification and prediction tasks, enriching the analytical toolkit available to researchers and practitioners alike. Through the application of these advanced methodologies, one can navigate the complexities of the digital marketplace, leveraging data-driven insights to drive innovation and strategic decision-making.
 
+To get specific, the way that machine learning will be used is in both supervised and unsupervised learning
+
 ## Questions to Answer
 
 1. Is there noticable trends in prices over time, over all products?
